[package]
name = "krypton-signaller"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
futures = "0.3"
libp2p = { version = "0.53", features = [
    "async-std",
    "noise",
    "macros",
    "ping",
    "tcp",
    "identify",
    "yamux",
    "relay",
    "dns",
    "websocket",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
envy = "0.4"
hex = "0.4"
